--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "grocery delivery app backend",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "test"
   },
   "author": "stefan ivanus",
@@ -12,5 +14,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
