--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mysql2": "^3.1.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
