--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "stefan ivanus",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
