--- a/package.json
+++ b/package.json
@@ -15,12 +15,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
-    "jest": "^29.4.3",
     "mysql2": "^3.1.0"
   },
   "devDependencies": {
-    "mocha": "^10.2.0",
-    "nodemon": "^2.0.20",
-    "supertest": "^6.3.3"
+    "nodemon": "^2.0.20"
   }
 }
